Fixing z-index error in sidebar

--- a/Frontend-React/solve4u-react/src/css/compStyle/compGlobalStyle/SidebarComp.css
+++ b/Frontend-React/solve4u-react/src/css/compStyle/compGlobalStyle/SidebarComp.css
@@ -8,6 +8,7 @@
   padding: 20px;
   box-sizing: border-box;
   transition: left 0.3s ease;
+  z-index: 9999;
 }
 
 .Aheaders {
